
----------
mcadler     Date: Mon Oct  1 18:39:29 EDT 2012  CSN: CSN-leap-343
                  Mon Oct  1 22:39:29 UTC 2012


Directory modules/leap/libraries/librl/base
 memory-interface.bsv      Locally Modified          342 

Directory modules/leap/libraries/platform-services/mem-services/scratchpad-memory-service
 platform-scratchpad-memory.bsv Locally Modified          342 

Directory modules/leap/libraries/platform-services/mem-services/central-cache-service/common
 central-cache-common.awb  Locally Modified          342 

Add new memory interface mappers that present a multi-read port interface
to the client but maintain storage within a memory having a single read port.
There are two versions.  One maintains strict read/write ordering relative to
the times at which requests arrive.  The other triggers writes immediately.
The latter is more efficient as long as the client can deal with the
unpredictability.

----------
kfleming    Date: Fri Oct  5 23:34:33 EDT 2012  CSN: CSN-leap-344
                  Sat Oct  6 03:34:33 UTC 2012


Directory config/pm/leap/demos/hello
 hello_hybrid_ml605.apm    Locally Modified          343 

Directory config/pm/leap/submodels/fpgaenv
 fpgaenv-hybrid-ml605-pcie.apm Locally Modified          343 


ml605's now use the differential clock. 

----------
kfleming    Date: Sat Oct  6 10:19:18 EDT 2012  CSN: CSN-leap-345
                  Sat Oct  6 14:19:18 UTC 2012


Directory config/pm/leap/submodels/fpgaenv
 fpgaenv-hybrid-ml605-pcie.apm Locally Modified          344 


Inverted ml605 reset (this was previously done at the model apm).

----------
kfleming    Date: Sat Oct  6 19:17:57 EDT 2012  CSN: CSN-leap-346
                  Sat Oct  6 23:17:57 UTC 2012


Directory config/pm/leap/demos/hello
 hello_hybrid_ml605.apm    Locally Modified          345 

Directory config/pm/leap/submodels/fpgaenv
 fpgaenv-hybrid-ml605-pcie.apm Locally Modified          345 


Gave non-default clocks for ml605 examples.